k8s/sleepr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleepr
spec:
  rules: 
    - http: 
        paths:
          - path: /reservations
            pathType: Prefix
            backend: 
              service: 
                name: reservations
                port: 
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend: 
              service: 
                name: auth-http
                port: 
                  number: 3001
